[gd_scene load_steps=23 format=2]

[ext_resource path="res://CameraController.gd" type="Script" id=1]
[ext_resource path="res://SplitScreen.shader" type="Shader" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Player1.gd" type="Script" id=4]
[ext_resource path="res://Player2.gd" type="Script" id=5]
[ext_resource path="res://floor.jpg" type="Texture" id=6]
[ext_resource path="res://Walls.gd" type="Script" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/viewport_size = null
shader_param/split_active = null
shader_param/split_origin = null
shader_param/player1 = null
shader_param/player2 = null
shader_param/border_width = null
shader_param/border_color = null

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.933333, 0.0784314, 0.0784314, 1 )

[sub_resource type="CapsuleShape" id=4]
radius = 1.00505

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.0784314, 0.411765, 0.933333, 1 )

[sub_resource type="SpatialMaterial" id=6]

[sub_resource type="PlaneMesh" id=7]
material = SubResource( 6 )
size = Vector2( 200, 200 )

[sub_resource type="VisualShaderNodeTexture" id=8]
texture = ExtResource( 6 )

[sub_resource type="VisualShaderNodeInput" id=9]
output_port_for_preview = 0
input_name = "uv"

[sub_resource type="VisualShaderNodeVectorOp" id=10]
default_input_values = [ 0, Vector3( 0, 0, 0 ), 1, Vector3( 100, 100, 100 ) ]
operator = 2

[sub_resource type="VisualShader" id=11]
code = "shader_type spatial;
uniform sampler2D tex_frg_2;


void vertex() {
// Output:0

}

void fragment() {
// Input:3
	vec3 n_out3p0;
	n_out3p0 = vec3(UV,0.0);

// VectorOp:4
	vec3 n_in4p1 = vec3(100.00000,100.00000,100.00000);
	vec3 n_out4p0;
	n_out4p0 = n_out3p0 * n_in4p1;

// Texture:2
	vec3 n_out2p0;
	float n_out2p1;
	vec4 tex_frg_2_read = texture( tex_frg_2 , n_out4p0.xy );
	n_out2p0 = tex_frg_2_read.rgb;
	n_out2p1 = tex_frg_2_read.a;

// Output:0
	ALBEDO = n_out2p0;
	ALPHA = n_out2p1;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -350, 179 )
nodes/fragment/2/node = SubResource( 8 )
nodes/fragment/2/position = Vector2( -40, 320 )
nodes/fragment/3/node = SubResource( 9 )
nodes/fragment/3/position = Vector2( -360, 360 )
nodes/fragment/4/node = SubResource( 10 )
nodes/fragment/4/position = Vector2( -180, 280 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 0, 2, 1, 0, 1, 3, 0, 4, 0, 4, 0, 2, 0 )

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 11 )

[sub_resource type="BoxShape" id=13]

[sub_resource type="BoxShape" id=14]

[sub_resource type="CubeMesh" id=15]

[node name="World" type="Spatial"]

[node name="Cameras" type="Spatial" parent="."]
editor/display_folded = true
script = ExtResource( 1 )

[node name="View" type="TextureRect" parent="Cameras"]
material = SubResource( 1 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
expand = true

[node name="Viewport1" type="Viewport" parent="Cameras"]
render_target_v_flip = true
render_target_update_mode = 3

[node name="Camera1" type="Camera" parent="Cameras/Viewport1"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 20, 0 )
current = true

[node name="Viewport2" type="Viewport" parent="Cameras"]
render_target_v_flip = true
render_target_update_mode = 3

[node name="Camera2" type="Camera" parent="Cameras/Viewport2"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 20, 0 )
current = true

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.755907, -0.291326, 0.586288, -0.336793, 0.594901, 0.729837, -0.561404, -0.749147, 0.351574, 0, 3.73699, 5.43975 )
light_energy = 0.6
shadow_enabled = true

[node name="OmniLight" type="OmniLight" parent="."]

[node name="Player1" type="KinematicBody" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0 )
script = ExtResource( 4 )

[node name="Mesh" type="MeshInstance" parent="Player1"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Player1"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Player2" type="KinematicBody" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.18358, 1.25, 3.01882 )
script = ExtResource( 5 )

[node name="Mesh" type="MeshInstance" parent="Player2"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="Player2"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Ground" type="StaticBody" parent="."]

[node name="Mesh" type="MeshInstance" parent="Ground"]
transform = Transform( 20, 0, 0, 0, 1, 0, 0, 0, 20, 0, 0, 0 )
mesh = SubResource( 7 )
material/0 = SubResource( 12 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
transform = Transform( 200, 0, 0, 0, 1, 0, 0, 0, 200, 0, -1, 0 )
shape = SubResource( 13 )

[node name="Walls" type="Spatial" parent="."]
script = ExtResource( 7 )

[node name="Group1" type="Spatial" parent="Walls"]

[node name="Wall1" type="StaticBody" parent="Walls/Group1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.08384, 1, -5.90156 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group1/Wall1"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group1/Wall1" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall2" type="StaticBody" parent="Walls/Group1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.3812, 1, -2.68735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group1/Wall2"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group1/Wall2" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall3" type="StaticBody" parent="Walls/Group1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.99091, 1, -13.3028 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group1/Wall3"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group1/Wall3" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall4" type="StaticBody" parent="Walls/Group1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10164, 1, 4.39061 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group1/Wall4"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group1/Wall4" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall5" type="StaticBody" parent="Walls/Group1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.12965, 1, -9.09735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group1/Wall5"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group1/Wall5" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall6" type="StaticBody" parent="Walls/Group1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.99301, 1, 1.77014 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group1/Wall6"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group1/Wall6" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Group2" type="Spatial" parent="Walls"]
editor/display_folded = true
transform = Transform( 0.988065, 0, -0.154039, 0, 1, 0, 0.154039, 0, 0.988065, -22.59, 0, -3.1796 )

[node name="Wall1" type="StaticBody" parent="Walls/Group2"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.08384, 1, -5.90156 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group2/Wall1"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group2/Wall1" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall2" type="StaticBody" parent="Walls/Group2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.3812, 1, -2.68735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group2/Wall2"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group2/Wall2" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall3" type="StaticBody" parent="Walls/Group2"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.99091, 1, -13.3028 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group2/Wall3"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group2/Wall3" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall4" type="StaticBody" parent="Walls/Group2"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10164, 1, 4.39061 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group2/Wall4"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group2/Wall4" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall5" type="StaticBody" parent="Walls/Group2"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.12965, 1, -9.09735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group2/Wall5"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group2/Wall5" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall6" type="StaticBody" parent="Walls/Group2"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.99301, 1, 1.77014 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group2/Wall6"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group2/Wall6" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Group3" type="Spatial" parent="Walls"]
editor/display_folded = true
transform = Transform( 0.905096, 0, 0.425207, 0, 1, 0, -0.425207, 0, 0.905096, -12.7693, 0, 17.7449 )

[node name="Wall1" type="StaticBody" parent="Walls/Group3"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.08384, 1, -5.90156 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group3/Wall1"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group3/Wall1" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall2" type="StaticBody" parent="Walls/Group3"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.3812, 1, -2.68735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group3/Wall2"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group3/Wall2" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall3" type="StaticBody" parent="Walls/Group3"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.99091, 1, -13.3028 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group3/Wall3"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group3/Wall3" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall4" type="StaticBody" parent="Walls/Group3"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10164, 1, 4.39061 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group3/Wall4"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group3/Wall4" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall5" type="StaticBody" parent="Walls/Group3"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.12965, 1, -9.09735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group3/Wall5"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group3/Wall5" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall6" type="StaticBody" parent="Walls/Group3"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.99301, 1, 1.77014 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group3/Wall6"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group3/Wall6" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Group4" type="Spatial" parent="Walls"]
transform = Transform( 0.155702, 0, -0.987804, 0, 1, 0, 0.987804, 0, 0.155702, 14.0374, 0, 12.1476 )

[node name="Wall1" type="StaticBody" parent="Walls/Group4"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.08384, 1, -5.90156 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group4/Wall1"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group4/Wall1" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall2" type="StaticBody" parent="Walls/Group4"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.3812, 1, -2.68735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group4/Wall2"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group4/Wall2" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall3" type="StaticBody" parent="Walls/Group4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.99091, 1, -13.3028 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group4/Wall3"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group4/Wall3" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall4" type="StaticBody" parent="Walls/Group4"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10164, 1, 4.39061 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group4/Wall4"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group4/Wall4" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall5" type="StaticBody" parent="Walls/Group4"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.12965, 1, -9.09735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group4/Wall5"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group4/Wall5" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall6" type="StaticBody" parent="Walls/Group4"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.99301, 1, 1.77014 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group4/Wall6"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group4/Wall6" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Group5" type="Spatial" parent="Walls"]
editor/display_folded = true
transform = Transform( 0.999549, 0, 0.0300306, 0, 1, 0, -0.0300306, 0, 0.999549, 0.500639, 0, 27.6888 )

[node name="Wall1" type="StaticBody" parent="Walls/Group5"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.08384, 1, -5.90156 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group5/Wall1"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group5/Wall1" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall2" type="StaticBody" parent="Walls/Group5"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.3812, 1, -2.68735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group5/Wall2"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group5/Wall2" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall3" type="StaticBody" parent="Walls/Group5"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.99091, 1, -13.3028 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group5/Wall3"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group5/Wall3" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall4" type="StaticBody" parent="Walls/Group5"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10164, 1, 4.39061 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group5/Wall4"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group5/Wall4" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall5" type="StaticBody" parent="Walls/Group5"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.12965, 1, -9.09735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group5/Wall5"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group5/Wall5" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall6" type="StaticBody" parent="Walls/Group5"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.99301, 1, 1.77014 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group5/Wall6"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group5/Wall6" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Group6" type="Spatial" parent="Walls"]
editor/display_folded = true
transform = Transform( 0.613129, 0, -0.789983, 0, 1, 0, 0.789983, 0, 0.613129, 21.2586, 0, -14.244 )

[node name="Wall1" type="StaticBody" parent="Walls/Group6"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.08384, 1, -5.90156 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group6/Wall1"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group6/Wall1" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall2" type="StaticBody" parent="Walls/Group6"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.3812, 1, -2.68735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group6/Wall2"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group6/Wall2" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall3" type="StaticBody" parent="Walls/Group6"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.99091, 1, -13.3028 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group6/Wall3"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group6/Wall3" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall4" type="StaticBody" parent="Walls/Group6"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10164, 1, 4.39061 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group6/Wall4"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group6/Wall4" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall5" type="StaticBody" parent="Walls/Group6"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.12965, 1, -9.09735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group6/Wall5"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group6/Wall5" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall6" type="StaticBody" parent="Walls/Group6"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.99301, 1, 1.77014 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group6/Wall6"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group6/Wall6" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Group7" type="Spatial" parent="Walls"]
editor/display_folded = true
transform = Transform( -0.999329, 0, -0.0366257, 0, 1, 0, 0.0366257, 0, -0.999329, -8.83615, 0, -32.7996 )

[node name="Wall1" type="StaticBody" parent="Walls/Group7"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.08384, 1, -5.90156 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group7/Wall1"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group7/Wall1" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall2" type="StaticBody" parent="Walls/Group7"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.3812, 1, -2.68735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group7/Wall2"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group7/Wall2" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall3" type="StaticBody" parent="Walls/Group7"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.99091, 1, -13.3028 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group7/Wall3"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group7/Wall3" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall4" type="StaticBody" parent="Walls/Group7"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10164, 1, 4.39061 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group7/Wall4"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group7/Wall4" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall5" type="StaticBody" parent="Walls/Group7"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.12965, 1, -9.09735 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group7/Wall5"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group7/Wall5" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null

[node name="Wall6" type="StaticBody" parent="Walls/Group7"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.99301, 1, 1.77014 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Group7/Wall6"]
shape = SubResource( 14 )

[node name="MeshInstance" type="MeshInstance" parent="Walls/Group7/Wall6" groups=[
"walls",
]]
mesh = SubResource( 15 )
material/0 = null
